Update build step in docs