@@ -63,6 +63,10 @@ Then double click inside the cell "Compilation options" and enter following para
 --add-exports=org.controlsfx.controls/impl.org.controlsfx.skin=org.jabref
 --add-reads org.jabref=org.fxmisc.flowless
 --add-reads org.jabref=org.apache.commons.csv
+--add-reads org.jabref=langchain4j.embeddings.all.minilm.l6.v2
+--add-reads org.jabref=langchain4j.embeddings.all.minilm.l6.v2.q
+--add-reads org.jabref=langchain4j.core
+--add-reads org.jabref=langchain4j.open.ai
 ```
 
 Press <kbd>Enter</kbd> to have the value really stored.
